# simple-forward-auth

./: Dockerfile  README.md  load.js
authn_service/: .env  Cargo.toml  configuration_auth.yaml
authn_service/migrations/: 20230704162155_create_api_keys_table.sql
authn_service/scripts/: init_db.sh  init_db_showtime.sh  init_redis.sh
authn_service/src/: configuration.rs  lib.rs  main.rs  startup.rs
authn_service/src/authn/: authn_service_impl.rs  mod.rs  ports.rs  postgres_token_repo.rs  redis_token_repo.rs
authn_service/src/infrastructure/: postgresql.rs  redis.rs
authn_service/src/routes/: authentication.rs  health_check.rs  mod.rs  readiness_check.rs
authn_service/tests/: generate_validate.rs
kubernetes/helm/traefik/: values.yaml
kubernetes/manifests/auth/: AuthDeployment.yaml  AuthMiddleware.yaml  AuthService.yaml  CacheDeployment.yaml  CacheService.yaml  PodMonitor.yaml
kubernetes/manifests/dummy-app/: NginxDeployment.yaml  NginxIngressRoute.yaml  NginxService.yaml
