[package]
name = "authn_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", ] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.6", default-features = false, features = ["offline","runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4.2.0"
futures = {version = "0.3"}
redis = { version = "0.21.5", features = ["tokio-comp"] }

tracing-log = "0.1.1"
tracing-bunyan-formatter = "0.3.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = "0.1.18"

autometrics = { version = "0.5", features = ["opentelemetry"] }
tracing-actix-web = "0.6"
opentelemetry = "0.19.0"
opentelemetry-jaeger = "0.19.0"
# tracing-opentelemetry = "0.18.0"
actix-web-opentelemetry = {version = "0.14.0", features=["metrics", "metrics-prometheus"]}
opentelemetry-prometheus = {version = "0.12.0"}
async-trait = "0.1.71"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.7.2"
mockall = "0.8.3"
